# rst2reveal

./: .gitignore  .gitmodules  MANIFEST.in  TODO  example-custom.css  example.css  example.scss  pyproject.toml  setup.py
_static/css/pygments/: algol.css  algol_nu.css  borland.css  colorful.css  inkpot.css  manni.css  material.css  monokai.css  paraiso-dark.css  perldoc.css  rainbow_dash.css  sas.css  tango.css  trac.css  vim.css  vs.css  xcode.css  zenburn.css
docs/: presentation.conf  presentation.html  presentation.rst
docs/reveal/css/: pygments.css  rst2reveal.css
docs/static/css/: rst2reveal.css
rst2reveal/: Parser.py  PlotDirective.py  RevealTranslator.py  VideoDirective.py  __init__.py  cli.py  directives.py  roles.py  transforms.py
rst2reveal/static/css/: pdf.css  rst2reveal.css
rst2reveal/static/css/pygments/: abap.css  algol.css  algol_nu.css  arduino.css  autumn.css  borland.css  bw.css  colorful.css  emacs.css  friendly.css  fruity.css  gruvbox-dark.css  gruvbox-light.css  igor.css  inkpot.css  lovelace.css  manni.css  material.css  monokai.css  murphy.css  native.css  nord-darker.css  paraiso-dark.css  paraiso-light.css  pastie.css  perldoc.css  rainbow_dash.css  rrt.css  sas.css  solarized-dark.css  solarized-light.css  stata-dark.css  stata-light.css  vs.css  (+5 more)
rst2reveal/static/html/: first_slide.html
static/css/: rst2reveal.css
static/css/pygments/: abap.css  arduino.css  bw.css  emacs.css  friendly.css  fruity.css  gruvbox-dark.css  igor.css  murphy.css  paraiso-light.css  pastie.css  rrt.css  solarized-light.css  stata-dark.css  stata.css
