[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
mypkg = ["*.css"]


[project]
name = "rst2reveal"
description = "Convert ReeStructuredText documents into cool HTML presentations"
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    { name = "Julien Vitay", email = "julien.vitay@gmail.com" },
    { name = "Santiago B. Pérez Pita", email = "santibreo@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "docutils",
    "pygments",
    "matplotlib",
]
dynamic = ["version"]

[project.scripts]
rst2reveal = "rst2reveal.cli:main"


[project.optional-dependencies]
dev = [
    "tox",
    "pre-commit",
]


[tool.ruff]
line-length = 84
exclude = [
  '__pycache__'
]
